--- a/content/c/02-variable-and-data-types.mdx
+++ b/content/c/02-variable-and-data-types.mdx
@@ -1,5 +1,5 @@
 ---
-title: C Variables and Data Types
+title: Variables and Data Types
 description: Learn about variables, data types, and memory usage in C programming.
 author: CSExplore Team
 ---
@@ -7,16 +7,14 @@ author: CSExplore Team
 # C Variables and Data Types 📝
 
 ## What are Variables? 🤔
+
 A **variable** in C is a name given to a memory location where data is stored. Every variable has a **data type**, which determines the kind of value it can store.
 
 ## **Declaring and Initializing Variables**
+
 Variables in C must be declared before use. The general syntax is:
 
-<CodeBlock language="c">
-{
-`data_type variable_name = value;`
-}
-</CodeBlock>
+<CodeBlock language="c">{`data_type variable_name = value;`}</CodeBlock>
 
 **Example:**
 
@@ -25,54 +23,55 @@ Variables in C must be declared before use. The general syntax is:
 `#include <stdio.h>
 
 int main() {
-    int age = 25;
-    float pi = 3.14;
-    char grade = 'A';
-    
+int age = 25;
+float pi = 3.14;
+char grade = 'A';
+
     printf("Age: %d", age);     // output-> Age: 25
     printf("Pi: %f", pi);       // output-> Pi: 3.14
     printf("Grade: %c", grade);     // output-> Grade: A
-    
+
     return 0;
+
 }`
 }
+
 </CodeBlock>
 
 ### **Multiple Variable Declarations**
+
 You can declare multiple variables of the same type in a single line:
 
 <CodeBlock language="c">
-{
-`int a = 10, b = 20, c = 30;
-float x = 5.5, y = 10.5;`
-}
+  {`int a = 10, b = 20, c = 30;
+float x = 5.5, y = 10.5;`}
 </CodeBlock>
 
 ## Data Types in C 📊
 
 C provides several built-in data types:
 
-| Data Type      | Description                              | Size (32-bit) | Size (64-bit) |
-|---------------|--------------------------------------|--------------|--------------|
-| `int`         | Stores whole numbers                 | 4 bytes      | 8 bytes      |
-| `float`       | Stores decimal numbers (single-precision) | 4 bytes  | 4 bytes  |
-| `double`      | Stores double-precision floating-point numbers | 8 bytes  | 8 bytes  |
-| `char`        | Stores a single character            | 1 byte       | 1 byte       |
-| `void`        | Represents an absence of data        | N/A          | N/A          |
-| `long`        | Extended size for integer values     | 8 bytes      | 8 bytes      |
-| `long long`   | Stores larger integer values        | 16 bytes     | 16 bytes     |
+| Data Type   | Description                                    | Size (32-bit) | Size (64-bit) |
+| ----------- | ---------------------------------------------- | ------------- | ------------- |
+| `int`       | Stores whole numbers                           | 4 bytes       | 8 bytes       |
+| `float`     | Stores decimal numbers (single-precision)      | 4 bytes       | 4 bytes       |
+| `double`    | Stores double-precision floating-point numbers | 8 bytes       | 8 bytes       |
+| `char`      | Stores a single character                      | 1 byte        | 1 byte        |
+| `void`      | Represents an absence of data                  | N/A           | N/A           |
+| `long`      | Extended size for integer values               | 8 bytes       | 8 bytes       |
+| `long long` | Stores larger integer values                   | 16 bytes      | 16 bytes      |
 
-Here is a example of `void`: 
+Here is a example of `void`:
 
 <CodeBlock language="c">
-{
-`void sum(int a, int b) {
+  {`void sum(int a, int b) {
     int result = a + b; // here we adding two variables values
     printf("result: %d", result);
-}`
-}
+}`}
 </CodeBlock>
-This function doesn't return anything, it calculate the value of a and b and display it. it looks like what happening is there, don't worry i will explain in the next section about the operator, then you can able to understandable easly.
+This function doesn't return anything, it calculate the value of a and b and
+display it. it looks like what happening is there, don't worry i will explain in
+the next section about the operator, then you can able to understandable easly.
 
 ### **Example Usage:**
 
@@ -81,20 +80,23 @@ This function doesn't return anything, it calculate the value of a and b and dis
 `#include <stdio.h>
 
 int main() {
-    int num = 10;
-    float percentage = 99.5;
-    char letter = 'B';
-    
+int num = 10;
+float percentage = 99.5;
+char letter = 'B';
+
     printf("Integer: %d", num); // output-> Integer: 10
     printf("Float: %f", percentage); // output-> Float: 99.500000
     printf("Character: %c", letter); // output-> Character: B
-    
+
     return 0;
+
 }`
 }
+
 </CodeBlock>
 
 ### **Size of Different Data Types**
+
 The `sizeof` operator can be used to determine the memory size of any data type:
 
 <CodeBlock language="c">
@@ -102,26 +104,26 @@ The `sizeof` operator can be used to determine the memory size of any data type:
 `#include <stdio.h>
 
 int main() {
-    printf("Size of int: %lu bytes", sizeof(int)); // output-> Size of int: 4 bytes
-    printf("Size of float: %lu bytes", sizeof(float)); // output-> Size of float: 4 bytes
-    printf("Size of double: %lu bytes", sizeof(double)); // output-> Size of double: 8 bytes
-    printf("Size of char: %lu bytes", sizeof(char)); // output-> Size of char: 1 byte
-    return 0;
+printf("Size of int: %lu bytes", sizeof(int)); // output-> Size of int: 4 bytes
+printf("Size of float: %lu bytes", sizeof(float)); // output-> Size of float: 4 bytes
+printf("Size of double: %lu bytes", sizeof(double)); // output-> Size of double: 8 bytes
+printf("Size of char: %lu bytes", sizeof(char)); // output-> Size of char: 1 byte
+return 0;
 }`
 }
+
 </CodeBlock>
 
 ## Constants and Keywords 🔒
+
 - **Constants**: Values that do not change during program execution.
 - **Keywords**: Reserved words in C (e.g., `int`, `return`, `char`).
 
 Example of **constant declaration**:
 
 <CodeBlock language="c">
-{
-`#define PI 3.1415
-const int MAX_LIMIT = 100;`
-}
+  {`#define PI 3.1415
+const int MAX_LIMIT = 100;`}
 </CodeBlock>
 
 ### **Using Constants in a Program**
@@ -133,13 +135,15 @@ const int MAX_LIMIT = 100;`
 #define PI 3.1415
 
 int main() {
-    const int radius = 5;
-    float area = PI * radius * radius;
-    
+const int radius = 5;
+float area = PI _ radius _ radius;
+
     printf("The area of the circle is: %f", area); // output-> The area of the circle is: 78.537500
     return 0;
+
 }`
 }
+
 </CodeBlock>
 
 ---
