--- a/content/c/04-control-flow.mdx
+++ b/content/c/04-control-flow.mdx
@@ -1,5 +1,5 @@
 ---
-title: Control Flow in C
+title: Control Flow
 description: Learn how to control the execution flow in C using conditional statements and loops.
 author: CSExplore Team
 ---
@@ -9,9 +9,11 @@ author: CSExplore Team
 Programming is all about making decisions and repeating tasks efficiently. Imagine you're planning a road trip. You decide when to take a turn, whether to stop for fuel, or if you need to keep driving based on different conditions. Similarly, in C, we use **control flow statements** to make decisions and repeat actions.
 
 ## Conditional Statements 🌟
+
 Conditional statements allow your program to take different actions based on conditions.
 
 ## The if Statement Making Decisions
+
 The `if` statement helps the program decide whether to execute a block of code.
 
 <CodeBlock language="c">
@@ -19,18 +21,20 @@ The `if` statement helps the program decide whether to execute a block of code.
 `#include <stdio.h>
 
 int main() {
-    int fuel = 10;
-    if (fuel > 5) {
-        printf("Enough fuel, let's keep driving!"); 
-    }
-    return 0;
+int fuel = 10;
+if (fuel > 5) {
+printf("Enough fuel, let's keep driving!");
+}
+return 0;
 }`
 }
+
 </CodeBlock>
 
 **Explanation:** If `fuel` is greater than 5, the message "Enough fuel, let's keep driving!" is printed.
 
 ## The if-else Statement Choosing Between Two Options
+
 What if the fuel is low? We use `if-else` to handle both situations.
 
 <CodeBlock language="c">
@@ -38,18 +42,20 @@ What if the fuel is low? We use `if-else` to handle both situations.
 `#include <stdio.h>
 
 int main() {
-    int fuel = 3;
-    if (fuel > 5) {
-        printf("Enough fuel, let's keep driving!");
-    } else {
-        printf("Low fuel! Time to refuel.");
-    }
-    return 0;
+int fuel = 3;
+if (fuel > 5) {
+printf("Enough fuel, let's keep driving!");
+} else {
+printf("Low fuel! Time to refuel.");
+}
+return 0;
 }`
 }
+
 </CodeBlock>
 
 ## The if-else-if Ladder Multiple Conditions
+
 Sometimes, we need to check multiple conditions before deciding.
 
 <CodeBlock language="c">
@@ -57,20 +63,22 @@ Sometimes, we need to check multiple conditions before deciding.
 `#include <stdio.h>
 
 int main() {
-    int temperature = 25;
-    if (temperature > 30) {
-        printf("It's too hot!");
-    } else if (temperature > 20) {
-        printf("Nice and warm.");
-    } else {
-        printf("It's cold! Wear a jacket.");
-    }
-    return 0;
+int temperature = 25;
+if (temperature > 30) {
+printf("It's too hot!");
+} else if (temperature > 20) {
+printf("Nice and warm.");
+} else {
+printf("It's cold! Wear a jacket.");
+}
+return 0;
 }`
 }
+
 </CodeBlock>
 
 ## The switch Statement Handling Multiple Cases
+
 If you have multiple choices (like a restaurant menu), `switch` makes it cleaner.
 
 <CodeBlock language="c">
@@ -78,22 +86,25 @@ If you have multiple choices (like a restaurant menu), `switch` makes it cleaner
 `#include <stdio.h>
 
 int main() {
-    int day = 3;
-    switch (day) {
-        case 1: printf("Monday"); break;
-        case 2: printf("Tuesday"); break;
-        case 3: printf("Wednesday"); break;
-        default: printf("Invalid day!");
-    }
-    return 0;
+int day = 3;
+switch (day) {
+case 1: printf("Monday"); break;
+case 2: printf("Tuesday"); break;
+case 3: printf("Wednesday"); break;
+default: printf("Invalid day!");
+}
+return 0;
 }`
 }
+
 </CodeBlock>
 
 ## Loops 🔁 Repeating Tasks
+
 Loops help repeat a block of code multiple times without writing it manually.
 
 ## The for Loop Counting Repetitions
+
 Imagine counting 1 to 5:
 
 <CodeBlock language="c">
@@ -101,15 +112,17 @@ Imagine counting 1 to 5:
 `#include <stdio.h>
 
 int main() {
-    for (int i = 1; i <= 5; i++) {
-        printf("Counting: %d", i);
-    }
-    return 0;
+for (int i = 1; i <= 5; i++) {
+printf("Counting: %d", i);
+}
+return 0;
 }`
 }
+
 </CodeBlock>
 
 ## The while Loop Repeat Until a Condition is Met
+
 Think of a car moving until it runs out of fuel.
 
 <CodeBlock language="c">
@@ -117,18 +130,20 @@ Think of a car moving until it runs out of fuel.
 `#include <stdio.h>
 
 int main() {
-    int fuel = 5;
-    while (fuel > 0) {
-        printf("Driving... Fuel left: %d", fuel);
-        fuel--;
-    }
-    printf("Out of fuel!");
-    return 0;
+int fuel = 5;
+while (fuel > 0) {
+printf("Driving... Fuel left: %d", fuel);
+fuel--;
+}
+printf("Out of fuel!");
+return 0;
 }`
 }
+
 </CodeBlock>
 
 ## The `do-while` Loop – Run at Least Once
+
 A vending machine always gives one attempt before checking if money was inserted.
 
 <CodeBlock language="c">
@@ -136,14 +151,15 @@ A vending machine always gives one attempt before checking if money was inserted
 `#include <stdio.h>
 
 int main() {
-    int attempts = 1;
-    do {
-        printf("Attempt %d: Trying to enter the password...", attempts);
-        attempts++;
-    } while (attempts <= 3);
-    return 0;
+int attempts = 1;
+do {
+printf("Attempt %d: Trying to enter the password...", attempts);
+attempts++;
+} while (attempts <= 3);
+return 0;
 }`
 }
+
 </CodeBlock>
 
 ---
