--- a/content/c/08-structures-and-union.mdx
+++ b/content/c/08-structures-and-union.mdx
@@ -1,26 +1,26 @@
 ---
-title: Structures & Unions in C
+title: Structures & Unions
 description: Master structures, unions, and pointers to structures in C.
 author: CSExplore Team
 ---
 
-# Structures & Unions  
+# Structures & Unions
 
-## 📖 The Tale of Blueprints and Flexible Storage  
+## 📖 The Tale of Blueprints and Flexible Storage
 
-Imagine you're an **architect** designing houses. Every house has a **blueprint** defining its structure: the number of rooms, the type of materials, and its dimensions. Similarly, in C programming, when we need to group different types of data under a single entity, we use **structures**.  
+Imagine you're an **architect** designing houses. Every house has a **blueprint** defining its structure: the number of rooms, the type of materials, and its dimensions. Similarly, in C programming, when we need to group different types of data under a single entity, we use **structures**.
 
-But what if you want to optimize **memory usage**? Instead of storing **all** data fields at once, what if you only need **one field at a time**? This is where **unions** come into play!  
+But what if you want to optimize **memory usage**? Instead of storing **all** data fields at once, what if you only need **one field at a time**? This is where **unions** come into play!
 
-In this article, we will **design and use structures**, explore the **differences between structures and unions**, and learn **how to use pointers with structures**. 🚀  
+In this article, we will **design and use structures**, explore the **differences between structures and unions**, and learn **how to use pointers with structures**. 🚀
 
-## 🔹 Defining and Using Structures  
+## 🔹 Defining and Using Structures
 
-A **structure** in C is a user-defined data type that allows us to **group different types of data** under a single name.  
+A **structure** in C is a user-defined data type that allows us to **group different types of data** under a single name.
 
-### **Declaring a Structure**  
+### **Declaring a Structure**
 
-We use the `struct` keyword to define a structure:  
+We use the `struct` keyword to define a structure:
 
 <CodeBlock language="c">
 {
@@ -28,14 +28,14 @@ We use the `struct` keyword to define a structure:
 
 // Define a structure named Student
 struct Student {
-    char name[50];
-    int age;
-    float marks;
+char name[50];
+int age;
+float marks;
 };
 
 int main() {
-    // Declare a structure variable
-    struct Student s1 = {"Alice", 20, 85.5};
+// Declare a structure variable
+struct Student s1 = {"Alice", 20, 85.5};
 
     // Access structure members using dot (.)
     printf("Name: %s\\n", s1.name);
@@ -43,13 +43,15 @@ int main() {
     printf("Marks: %.2f\\n", s1.marks);
 
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-### **Initializing a Structure**  
+</CodeBlock>
 
-We can initialize a structure in multiple ways:  
+### **Initializing a Structure**
+
+We can initialize a structure in multiple ways:
 
 <CodeBlock language="c">
 {
@@ -60,28 +62,29 @@ s2.age = 22;
 s2.marks = 90.2;
 strcpy(s2.name, "Bob"); // Use strcpy for strings`
 }
-</CodeBlock>  
 
-## ⚔️ Structures vs Unions  
+</CodeBlock>
 
-While **structures** store **all members at once**, **unions** allow storing **only one value at a time**, **sharing the same memory location**. This makes **unions memory-efficient** but **less flexible** than structures.  
+## ⚔️ Structures vs Unions
 
-### **Understanding Unions**  
+While **structures** store **all members at once**, **unions** allow storing **only one value at a time**, **sharing the same memory location**. This makes **unions memory-efficient** but **less flexible** than structures.
 
-A **union** is declared using the `union` keyword:  
+### **Understanding Unions**
+
+A **union** is declared using the `union` keyword:
 
 <CodeBlock language="c">
 {
 `#include <stdio.h>
 
 union Data {
-    int i;
-    float f;
-    char str[20];
+int i;
+float f;
+char str[20];
 };
 
 int main() {
-    union Data data;
+union Data data;
 
     data.i = 10;  // Store integer
     printf("Integer: %d\\n", data.i);
@@ -93,39 +96,41 @@ int main() {
     printf("String: %s\\n", data.str);
 
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-### **Key Differences: Structures vs. Unions**  
+</CodeBlock>
 
-| Feature       | Structures | Unions |
-|--------------|-----------|--------|
-| Memory Usage | Stores all members separately | Stores only one member at a time |
-| Access       | All members can be accessed simultaneously | Only the most recently assigned member is valid |
-| Use Case     | When you need multiple fields to exist together | When you need only one value at a time |
+### **Key Differences: Structures vs. Unions**
 
-💡 **Tip:** Use **structures** when you need multiple values simultaneously and **unions** when you want to **save memory** by storing only one value at a time.  
+| Feature      | Structures                                      | Unions                                          |
+| ------------ | ----------------------------------------------- | ----------------------------------------------- |
+| Memory Usage | Stores all members separately                   | Stores only one member at a time                |
+| Access       | All members can be accessed simultaneously      | Only the most recently assigned member is valid |
+| Use Case     | When you need multiple fields to exist together | When you need only one value at a time          |
 
-## 🎯 Pointers to Structures  
+💡 **Tip:** Use **structures** when you need multiple values simultaneously and **unions** when you want to **save memory** by storing only one value at a time.
 
-To **efficiently handle structures**, we use **pointers to structures**. This avoids copying large amounts of data and speeds up processing.  
+## 🎯 Pointers to Structures
 
-### **Declaring a Pointer to a Structure**  
+To **efficiently handle structures**, we use **pointers to structures**. This avoids copying large amounts of data and speeds up processing.
+
+### **Declaring a Pointer to a Structure**
 
 <CodeBlock language="c">
 {
 `#include <stdio.h>
 
 struct Student {
-    char name[50];
-    int age;
-    float marks;
+char name[50];
+int age;
+float marks;
 };
 
 int main() {
-    struct Student s1 = {"Alice", 20, 85.5};
-    struct Student *ptr = &s1; // Pointer to structure
+struct Student s1 = {"Alice", 20, 85.5};
+struct Student \*ptr = &s1; // Pointer to structure
 
     // Access members using '->' (arrow operator)
     printf("Name: %s\\n", ptr->name);
@@ -133,25 +138,25 @@ int main() {
     printf("Marks: %.2f\\n", ptr->marks);
 
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-### **Accessing Members Using Arrow (`->`) Operator**  
+</CodeBlock>
 
-When using a structure pointer, we use `->` instead of `.` to access members:  
+### **Accessing Members Using Arrow (`->`) Operator**
+
+When using a structure pointer, we use `->` instead of `.` to access members:
 
 <CodeBlock language="c">
-{
-`ptr->age = 22;  // Equivalent to (*ptr).age = 22;`
-}
-</CodeBlock>  
+  {`ptr->age = 22;  // Equivalent to (*ptr).age = 22;`}
+</CodeBlock>
 
-This is crucial when working with **dynamic memory allocation**, which we’ll see next!  
+This is crucial when working with **dynamic memory allocation**, which we’ll see next!
 
-## 🚀 Dynamic Memory Allocation for Structures  
+## 🚀 Dynamic Memory Allocation for Structures
 
-Just like arrays, we can allocate memory dynamically for structures using `malloc()`.  
+Just like arrays, we can allocate memory dynamically for structures using `malloc()`.
 
 <CodeBlock language="c">
 {
@@ -159,13 +164,13 @@ Just like arrays, we can allocate memory dynamically for structures using `mallo
 #include <stdlib.h>
 
 struct Student {
-    char name[50];
-    int age;
-    float marks;
+char name[50];
+int age;
+float marks;
 };
 
 int main() {
-    struct Student *ptr;
+struct Student \*ptr;
 
     // Allocate memory for one structure
     ptr = (struct Student *)malloc(sizeof(struct Student));
@@ -187,10 +192,12 @@ int main() {
     free(ptr); // Free allocated memory
 
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-With this knowledge, you're now ready to **build complex data structures** in C! 🚀  
+</CodeBlock>
 
-🛠️ **Next up:** **File Handling in C!** 📂  
+With this knowledge, you're now ready to **build complex data structures** in C! 🚀
+
+🛠️ **Next up:** **File Handling in C!** 📂
