--- a/content/c/09-file-handling.mdx
+++ b/content/c/09-file-handling.mdx
@@ -1,31 +1,31 @@
 ---
-title: File Handling in C
+title: File Handling
 description: Learn how to open, read, write, and manage files in C.
 author: CSExplore Team
 ---
 
-# 📂 File Handling in C  
+# 📂 File Handling in C
 
-## 📖 The Tale of Data Persistence  
+## 📖 The Tale of Data Persistence
 
-Imagine you’re working on a **banking system** that stores customer transactions. If the data is stored only in memory, it will be **lost when the program exits**. To make it **permanent**, we need **files** to store and retrieve data whenever needed.  
+Imagine you’re working on a **banking system** that stores customer transactions. If the data is stored only in memory, it will be **lost when the program exits**. To make it **permanent**, we need **files** to store and retrieve data whenever needed.
 
-In this module, we’ll explore **how to open and close files, read and write data, and use different file modes**. By the end, you’ll be able to **manage data like a pro!** 🚀  
+In this module, we’ll explore **how to open and close files, read and write data, and use different file modes**. By the end, you’ll be able to **manage data like a pro!** 🚀
 
-## 🔹 Opening & Closing Files  
+## 🔹 Opening & Closing Files
 
-In C, file handling is done using the `FILE` pointer from the `<stdio.h>` library.  
+In C, file handling is done using the `FILE` pointer from the `<stdio.h>` library.
 
-### **Opening a File**  
+### **Opening a File**
 
-To open a file, we use the `fopen()` function.  
+To open a file, we use the `fopen()` function.
 
 <CodeBlock language="c">
 {
 `#include <stdio.h>
 
 int main() {
-    FILE *file;
+FILE \*file;
 
     // Open file in write mode
     file = fopen("data.txt", "w");
@@ -36,40 +36,38 @@ int main() {
     }
 
     printf("File opened successfully!\\n");
-    
+
     fclose(file); // Close the file
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-### **Closing a File**  
+</CodeBlock>
 
-After working with a file, always **close it using `fclose()`** to free up system resources.  
+### **Closing a File**
 
-<CodeBlock language="c">
-{
-`fclose(file); // Close the file`
-}
-</CodeBlock>  
+After working with a file, always **close it using `fclose()`** to free up system resources.
 
+<CodeBlock language="c">{`fclose(file); // Close the file`}</CodeBlock>
 
-## ✍️ Reading & Writing Files  
+## ✍️ Reading & Writing Files
 
-There are two primary ways to handle files:  
-- **Text Mode** (default, human-readable)  
-- **Binary Mode** (efficient for non-text data like images, videos)  
+There are two primary ways to handle files:
 
-### **Writing to a File (`fprintf`)**  
+- **Text Mode** (default, human-readable)
+- **Binary Mode** (efficient for non-text data like images, videos)
 
-To store data in a file, we use `fprintf()`.  
+### **Writing to a File (`fprintf`)**
+
+To store data in a file, we use `fprintf()`.
 
 <CodeBlock language="c">
 {
 `#include <stdio.h>
 
 int main() {
-    FILE *file = fopen("data.txt", "w");
+FILE \*file = fopen("data.txt", "w");
 
     if (file == NULL) {
         printf("Error opening file!\\n");
@@ -82,21 +80,23 @@ int main() {
     printf("Data written successfully!\\n");
 
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-### **Reading from a File (`fscanf`)**  
+</CodeBlock>
 
-To retrieve data, we use `fscanf()`.  
+### **Reading from a File (`fscanf`)**
+
+To retrieve data, we use `fscanf()`.
 
 <CodeBlock language="c">
 {
 `#include <stdio.h>
 
 int main() {
-    FILE *file = fopen("data.txt", "r");
-    char str[100];
+FILE \*file = fopen("data.txt", "r");
+char str[100];
 
     if (file == NULL) {
         printf("Error opening file!\\n");
@@ -108,37 +108,39 @@ int main() {
 
     fclose(file);
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-## 📜 File Modes & Operations  
+</CodeBlock>
 
-Each file mode defines how the file is accessed. Here’s a quick reference:  
+## 📜 File Modes & Operations
 
-| Mode  | Description |
-|-------|------------|
-| `"r"` | Read mode (file must exist) |
-| `"w"` | Write mode (creates new file or erases existing content) |
-| `"a"` | Append mode (adds data without erasing existing content) |
-| `"r+"` | Read & write mode (file must exist) |
+Each file mode defines how the file is accessed. Here’s a quick reference:
+
+| Mode   | Description                                                     |
+| ------ | --------------------------------------------------------------- |
+| `"r"`  | Read mode (file must exist)                                     |
+| `"w"`  | Write mode (creates new file or erases existing content)        |
+| `"a"`  | Append mode (adds data without erasing existing content)        |
+| `"r+"` | Read & write mode (file must exist)                             |
 | `"w+"` | Read & write mode (creates new file or erases existing content) |
-| `"a+"` | Append & read mode (preserves existing content) |
+| `"a+"` | Append & read mode (preserves existing content)                 |
 
 💡 **Tip:** Use `"a+"` if you want to add new data without deleting previous content.
 
-## 🔄 Advanced File Operations  
+## 🔄 Advanced File Operations
 
-### **Appending Data to a File**  
+### **Appending Data to a File**
 
-To **add new content** to an existing file, open it in `"a"` (append) mode.  
+To **add new content** to an existing file, open it in `"a"` (append) mode.
 
 <CodeBlock language="c">
 {
 `#include <stdio.h>
 
 int main() {
-    FILE *file = fopen("data.txt", "a");
+FILE \*file = fopen("data.txt", "a");
 
     if (file == NULL) {
         printf("Error opening file!\\n");
@@ -151,21 +153,23 @@ int main() {
     printf("Data appended successfully!\\n");
 
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-### **Reading an Entire File (`fgets`)**  
+</CodeBlock>
 
-To read **multiple lines**, use `fgets()`.  
+### **Reading an Entire File (`fgets`)**
+
+To read **multiple lines**, use `fgets()`.
 
 <CodeBlock language="c">
 {
 `#include <stdio.h>
 
 int main() {
-    FILE *file = fopen("data.txt", "r");
-    char buffer[255];
+FILE \*file = fopen("data.txt", "r");
+char buffer[255];
 
     if (file == NULL) {
         printf("Error opening file!\\n");
@@ -178,29 +182,31 @@ int main() {
 
     fclose(file);
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-### **Binary File Handling (`fwrite` & `fread`)**  
+</CodeBlock>
+
+### **Binary File Handling (`fwrite` & `fread`)**
 
 To store **structured data efficiently**, we use **binary mode (`wb`, `rb`)**.
 
-#### Writing a Struct to a Binary File  
+#### Writing a Struct to a Binary File
 
 <CodeBlock language="c">
 {
 `#include <stdio.h>
 
 struct Student {
-    char name[50];
-    int age;
-    float marks;
+char name[50];
+int age;
+float marks;
 };
 
 int main() {
-    struct Student s1 = {"Alice", 20, 85.5};
-    FILE *file = fopen("student.dat", "wb");
+struct Student s1 = {"Alice", 20, 85.5};
+FILE \*file = fopen("student.dat", "wb");
 
     if (file == NULL) {
         printf("Error opening file!\\n");
@@ -213,25 +219,27 @@ int main() {
     printf("Data written in binary mode!\\n");
 
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-#### Reading a Struct from a Binary File  
+</CodeBlock>
+
+#### Reading a Struct from a Binary File
 
 <CodeBlock language="c">
 {
 `#include <stdio.h>
 
 struct Student {
-    char name[50];
-    int age;
-    float marks;
+char name[50];
+int age;
+float marks;
 };
 
 int main() {
-    struct Student s1;
-    FILE *file = fopen("student.dat", "rb");
+struct Student s1;
+FILE \*file = fopen("student.dat", "rb");
 
     if (file == NULL) {
         printf("Error opening file!\\n");
@@ -243,10 +251,12 @@ int main() {
 
     fclose(file);
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-With this knowledge, you can now **store, modify, and manage data persistently!** 🚀  
+</CodeBlock>
 
-🛠️ **Next up:** **Mastering Data Structures in C!** 📊  
+With this knowledge, you can now **store, modify, and manage data persistently!** 🚀
+
+🛠️ **Next up:** **Mastering Data Structures in C!** 📊
