--- a/content/c/11-projects-and-practice.mdx
+++ b/content/c/11-projects-and-practice.mdx
@@ -1,37 +1,39 @@
 ---
-title: Projects & Practice in C
+title: Projects & Practice
 description: Work on mini-projects like a Student Management System and a Calculator to apply your C programming skills.
 author: CSExplore Team
 ---
 
-# 🟢 Projects & Practice  
+# 🟢 Projects & Practice
 
-## 🎯 Bringing It All Together  
+## 🎯 Bringing It All Together
 
-You’ve come a long way! From **functions and pointers** to **file handling and linked lists**, you've built a solid foundation in C. But theory alone won’t make you a great programmer—**practice will!**  
+You’ve come a long way! From **functions and pointers** to **file handling and linked lists**, you've built a solid foundation in C. But theory alone won’t make you a great programmer—**practice will!**
 
-In this module, you'll **apply everything you've learned** by building **mini-projects** like:  
-- ✔️ **Student Management System** → Handle student records dynamically.  
-- ✔️ **Calculator** → Implement a command-line calculator.  
+In this module, you'll **apply everything you've learned** by building **mini-projects** like:
 
-These projects will **boost your confidence** and **prepare you for real-world applications**.  
+- ✔️ **Student Management System** → Handle student records dynamically.
+- ✔️ **Calculator** → Implement a command-line calculator.
 
-## 🏫 Project 1: Student Management System  
+These projects will **boost your confidence** and **prepare you for real-world applications**.
 
-### **What Is It?**  
+## 🏫 Project 1: Student Management System
 
-Imagine you're developing a system for a school where:  
-- ✔️ Students have **names, roll numbers, and marks**.  
-- ✔️ You can **add, delete, and display student records**.  
-- ✔️ Data is stored **dynamically using linked lists**.  
+### **What Is It?**
 
-### **How It Works**  
+Imagine you're developing a system for a school where:
 
-- We'll create a **struct Student** to store student details.  
-- We'll use **linked lists** for dynamic storage.  
-- Functions will handle **adding, displaying, and deleting records**.  
+- ✔️ Students have **names, roll numbers, and marks**.
+- ✔️ You can **add, delete, and display student records**.
+- ✔️ Data is stored **dynamically using linked lists**.
 
-### **Code Implementation**  
+### **How It Works**
+
+- We'll create a **struct Student** to store student details.
+- We'll use **linked lists** for dynamic storage.
+- Functions will handle **adding, displaying, and deleting records**.
+
+### **Code Implementation**
 
 <CodeBlock language="c">
 {
@@ -41,48 +43,48 @@ Imagine you're developing a system for a school where:
 
 // Structure for Student
 struct Student {
-    int roll;
-    char name[50];
-    float marks;
-    struct Student *next;
+int roll;
+char name[50];
+float marks;
+struct Student \*next;
 };
 
 // Function to add a student
 struct Student* addStudent(struct Student *head, int roll, char name[], float marks) {
-    struct Student *newStudent = (struct Student*)malloc(sizeof(struct Student));
-    newStudent->roll = roll;
-    strcpy(newStudent->name, name);
-    newStudent->marks = marks;
-    newStudent->next = head;
-    return newStudent;
+struct Student _newStudent = (struct Student_)malloc(sizeof(struct Student));
+newStudent->roll = roll;
+strcpy(newStudent->name, name);
+newStudent->marks = marks;
+newStudent->next = head;
+return newStudent;
 }
 
 // Function to display students
 void displayStudents(struct Student *head) {
-    struct Student *temp = head;
-    while (temp != NULL) {
-        printf("Roll: %d, Name: %s, Marks: %.2f\\n", temp->roll, temp->name, temp->marks);
-        temp = temp->next;
-    }
+struct Student *temp = head;
+while (temp != NULL) {
+printf("Roll: %d, Name: %s, Marks: %.2f\\n", temp->roll, temp->name, temp->marks);
+temp = temp->next;
+}
 }
 
 // Function to delete a student
 struct Student* deleteStudent(struct Student *head, int roll) {
-    struct Student *temp = head, *prev = NULL;
-    while (temp != NULL && temp->roll != roll) {
-        prev = temp;
-        temp = temp->next;
-    }
-    if (temp == NULL) return head;
-    if (prev == NULL) head = temp->next;
-    else prev->next = temp->next;
-    free(temp);
-    return head;
+struct Student *temp = head, *prev = NULL;
+while (temp != NULL && temp->roll != roll) {
+prev = temp;
+temp = temp->next;
+}
+if (temp == NULL) return head;
+if (prev == NULL) head = temp->next;
+else prev->next = temp->next;
+free(temp);
+return head;
 }
 
 // Main function
 int main() {
-    struct Student *head = NULL;
+struct Student \*head = NULL;
 
     // Adding students
     head = addStudent(head, 101, "Alice", 85.5);
@@ -98,28 +100,32 @@ int main() {
     displayStudents(head);
 
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-### **How This Helps You**  
-- ✅ **Uses linked lists** for dynamic storage.  
-- ✅ **Applies file handling & structures**.  
-- ✅ **Gives real-world application experience**.  
+</CodeBlock>
 
-## 🧮 Project 2: Command-Line Calculator  
+### **How This Helps You**
 
-### **What Is It?**  
+- ✅ **Uses linked lists** for dynamic storage.
+- ✅ **Applies file handling & structures**.
+- ✅ **Gives real-world application experience**.
 
-A simple **command-line calculator** that supports:  
-- ✔️ Addition (`+`)  
-- ✔️ Subtraction (`-`)  
-- ✔️ Multiplication (`*`)  
-- ✔️ Division (`/`)  
+## 🧮 Project 2: Command-Line Calculator
+
+### **What Is It?**
+
+A simple **command-line calculator** that supports:
+
+- ✔️ Addition (`+`)
+- ✔️ Subtraction (`-`)
+- ✔️ Multiplication (`*`)
+- ✔️ Division (`/`)
 
 You'll enter **two numbers and an operator**, and the calculator will return the result.
 
-### **Code Implementation**  
+### **Code Implementation**
 
 <CodeBlock language="c">
 {
@@ -127,18 +133,18 @@ You'll enter **two numbers and an operator**, and the calculator will return the
 
 // Function to perform calculations
 float calculate(float num1, float num2, char op) {
-    switch (op) {
-        case '+': return num1 + num2;
-        case '-': return num1 - num2;
-        case '*': return num1 * num2;
-        case '/': return (num2 != 0) ? num1 / num2 : 0;
-        default: return 0;
-    }
+switch (op) {
+case '+': return num1 + num2;
+case '-': return num1 - num2;
+case '_': return num1 _ num2;
+case '/': return (num2 != 0) ? num1 / num2 : 0;
+default: return 0;
+}
 }
 
 int main() {
-    float num1, num2, result;
-    char op;
+float num1, num2, result;
+char op;
 
     // Taking input
     printf("Enter expression (e.g., 5 + 3): ");
@@ -149,32 +155,38 @@ int main() {
     printf("Result: %.2f\\n", result);
 
     return 0;
+
 }`
 }
-</CodeBlock>  
 
-### **How This Helps You**  
-- ✅ **Applies functions & switch statements**.  
-- ✅ **Enhances user interaction via input handling**.  
-- ✅ **Great for building a CLI tool!**  
+</CodeBlock>
 
-## 🔥 Final Challenge: Enhance These Projects  
+### **How This Helps You**
 
-💡 **Ideas to expand the Student Management System:**  
-- ✔️ Store **data in a file** so records aren't lost when the program exits.  
-- ✔️ Add **search and sorting** for better organization.  
+- ✅ **Applies functions & switch statements**.
+- ✅ **Enhances user interaction via input handling**.
+- ✅ **Great for building a CLI tool!**
 
-💡 **Ideas to enhance the Calculator:**  
-- ✔️ Support **modulus (%) and power (^) operations**.  
-- ✔️ Allow **multiple calculations** in one session.  
+## 🔥 Final Challenge: Enhance These Projects
 
-🚀 **You're now ready to build real-world applications in C!**  
+💡 **Ideas to expand the Student Management System:**
 
---- 
+- ✔️ Store **data in a file** so records aren't lost when the program exits.
+- ✔️ Add **search and sorting** for better organization.
 
-### 🏆 **Next Steps**  
-- 🔹 Take on **bigger projects** (e.g., Inventory System, Banking System).  
-- 🔹 Try **competitive programming** to sharpen your logic.  
-- 🔹 Explore **advanced C topics** like multi-threading!  
+💡 **Ideas to enhance the Calculator:**
 
-💡 **Have an idea for a new project? Try it out!** 🛠️  
+- ✔️ Support **modulus (%) and power (^) operations**.
+- ✔️ Allow **multiple calculations** in one session.
+
+🚀 **You're now ready to build real-world applications in C!**
+
+---
+
+### 🏆 **Next Steps**
+
+- 🔹 Take on **bigger projects** (e.g., Inventory System, Banking System).
+- 🔹 Try **competitive programming** to sharpen your logic.
+- 🔹 Explore **advanced C topics** like multi-threading!
+
+💡 **Have an idea for a new project? Try it out!** 🛠️
