Fix: syntax error

--- a/content/cpp/01-introduction.mdx
+++ b/content/cpp/01-introduction.mdx
@@ -80,13 +80,11 @@ return 0;
 - Save it as `hello.cpp`
 - Open terminal and compile:
   <CodeBlock language="sh">
-    {`g++ hello.cpp -o hello
-`}
+    {`g++ hello.cpp -o hello`}
   </CodeBlock>
 - Run the program:
   <CodeBlock language="sh">
-    {`./hello
-`}
+    {`./hello`}
   </CodeBlock>
 
 📌 **Output:**
